# ai-agents-with-langchain-langgraph

./: HealthBot.ipynb  pyproject.toml
L1_Introduction_to_Agentic_Frameworks/demos/: L1_demo_01_memory_layer.ipynb  L1_demo_02_function_calling.ipynb  L1_demo_03_react.ipynb  L1_demo_04_multi_agents.ipynb
L1_Introduction_to_Agentic_Frameworks/exercises/01_simple_llm_call/: L1_context_exercise_01_simple_llm_call.md  L1_solution_exercise_01_simple_llm_calls.ipynb  L1_starter_exercise_01_simple_llm_calls.ipynb
L1_Introduction_to_Agentic_Frameworks/exercises/02_create_an_agent_from_scratch/: L1_context_exercise_02_agents_from_scratch.md  (+2 more)
L2_Building_with_LLMs_in_LangChain/demos/: L2_demo_01_langchain_101.ipynb  L2_demo_02_streaming.ipynb  L2_demo_03_output.ipynb  L2_demo_04_LCEL copy.ipynb  L2_demo_04_LCEL.ipynb  L2_demo_05_RAG copy.ipynb  L2_demo_06_tools.ipynb  L2_demo_07_agent.ipynb
L3_Agentic_Workflows_with_LangGraph/demos/: L3_demo_01_langgraph_workflow.ipynb  L3_demo_02_schemas.ipynb  L3_demo_03_reducers.ipynb  L3_demo_04_config.ipynb  L3_demo_05_database_toolkit.ipynb  L3_demo_06_limiting_messages.ipynb  L3_demo_07_multiple_schemas.ipynb  L3_demo_08_checkpoints.ipynb
L4_Creating_a_Knowledge_Base_Agent/demos/: L4_demo_01_calling_apis.ipynb  L4_demo_02_long_term_memory.ipynb  L4_demo_02_persisting_memory.ipynb  L4_demo_03_embeddings.ipynb  L4_demo_04_chromadb.ipynb  L4_demo_05_agentic_rag.ipynb  L4_demo_06_langmem.ipynb  L4_demo_07_human_in_the_loop.ipynb  L4_demo_08_observability.ipynb  L4_demo_09_evaluation.ipynb
project/healthbot/: README.md  main.ipynb  pyproject.toml  requirements.txt
(+52 files in other folders)
