[project]
name = "ai-agents-with-langchain-langgraph-udacity"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=0.3.29",
    "langgraph>=0.6.4",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.42",
    "tavily-python>=0.7.10",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
