[project]
name = "ai-agents-with-langchain-langgraph-udacity"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.16",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.29",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.6.4",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langmem>=0.0.29",
    "matplotlib>=3.10.5",
    "mlflow>=3.2.0",
    "pandas>=2.3.1",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "ragas>=0.3.1",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.42",
    "tavily-python>=0.7.10",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1"
]
