[project]
name = "healthbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-openai==0.1.23",
    "langchainhub==0.1.21",
    "langgraph==0.2.19",
    "python-dotenv==1.0.1",
    "tavily-python==0.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
